--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@inertiajs/react": "^2.0.6",
+        "@radix-ui/react-alert-dialog": "^1.1.7",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.1.5",
         "@radix-ui/react-collapsible": "^1.1.3",
@@ -26,7 +27,7 @@
         "@radix-ui/react-scroll-area": "^1.2.4",
         "@radix-ui/react-select": "^2.1.7",
         "@radix-ui/react-separator": "^1.1.2",
-        "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-slot": "^1.2.0",
         "@radix-ui/react-tabs": "^1.1.3",
         "@radix-ui/react-tooltip": "^1.1.8",
         "@tanstack/react-table": "^8.21.2",
@@ -37,6 +38,7 @@
         "lucide-react": "^0.487.0",
         "next-themes": "^0.4.6",
         "react-dom": "^19.1.0",
+        "react-international-phone": "^4.5.0",
         "react-phone-number-input": "^3.4.12",
         "recharts": "^2.15.2",
         "sonner": "^2.0.3",
